--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   firebase_storage: ^3.1.5
   intl: ^0.16.1
   timeago: ^2.0.26
+  sqflite: ^1.3.0+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
