--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   intl: ^0.16.1
   timeago: ^2.0.26
   sqflite: ^1.3.0+1
+  flutter_secure_storage: ^3.3.3
+  shared_preferences: ^0.5.7+2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
