--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -66,5 +66,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
-    implementation 'com.google.firebase:firebase-analytics:17.4.0' //for firebase setup
+    implementation 'com.google.firebase:firebase-analytics:17.4.0' //f// or firebase setup
+    implementation 'com.google.firebase:firebase-messaging:20.1.5'
 }
