--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   sqflite: ^1.3.0+1
   flutter_secure_storage: ^3.3.3
   shared_preferences: ^0.5.7+2
+  firebase_messaging:  ^6.0.16
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
