--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_secure_storage: ^3.3.3
   shared_preferences: ^0.5.7+2
   firebase_messaging:  ^6.0.16
+  flutter_local_notifications: ^1.4.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
