Select Survey created

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,17 @@ dependencies:
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
+  flutter_launcher_icons: "^0.7.3"
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/logo.png"
+
+flutter_launcher_name:
+  name: "AGU Career"
 
 
 # For information on the generic Dart part of this file, see the
