--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,7 @@ flutter_icons:
   image_path: "assets/images/logo.png"
 
 flutter_launcher_name:
-  name: "AGU Career"
+  name: "AGU Kariyer"
 
 
 # For information on the generic Dart part of this file, see the
